Clean up portage dir; add useful bash scripts

--- a/i3.conf
+++ b/i3.conf
@@ -207,6 +207,7 @@ bar {
 }
 
 bindsym $mod+shift+x exec lock
+bindsym $mod+shift+s exec sh ~/.local/bin/xrandr-reset
 bindsym --release Print exec scrot
 
 exec_always setxkbmap -layout us,ru -option "ctrl:nocaps" -option grp:shifts_toggle
