New packages added to the base system.

--- a/i3.conf
+++ b/i3.conf
@@ -213,4 +213,5 @@ bindsym --release Print exec scrot
 exec_always setxkbmap -layout us,ru -option "ctrl:nocaps" -option grp:shifts_toggle
 exec_always xrdb -merge ~/.Xresources
 exec_always --no-startup-id feh --bg-fill ~/wallpaper.png
+for_window [class="Sakura"] fullscreen enable
 # assign [class=""] $ws1
