Set gohufont as a default font for st terminal.

--- a/i3.conf
+++ b/i3.conf
@@ -26,7 +26,7 @@ font pango:System San Francisco Display Bold 12
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec st
+bindsym $mod+Return exec st -f gohufont-10
 
 # kill focused window
 bindsym $mod+Shift+q kill
